<resources>
    <string name="app_name">IPDapp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_formation">Formation</string>
    <string name="menu_degree">Degree</string>
    <string name="menu_university">University</string>
    <string name="menu_help">Help</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Create a new account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="connection">Connection</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>

    <string name="logo">Logo</string>
    <string name="email">ipd@IPD.com</string>
    <string name="marks">Marks</string>

    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="register">Register</string>

    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>

    <string name="home">Home</string>
    <string name="formation">Formation</string>
    <string name="degree">Degree</string>
    <string name="inscription">Inscription</string>
    <string name="university">University</string>

    <string name="error_field">Error field</string>
    <string name="error_parameter">Error parameters</string>
    <string name="error_connection">Connection error </string>
    <string name="help">Help </string>
    <string name="wait">Please Wait </string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="level">Level</string>
    <string name="master">Master</string>
    <string name="bachelor">Bachelor</string>
    <string name="olevel">O-Level</string>
    <string name="title_activity_university">IPD sur carte</string>

    <!-- TODO: Remove or change this placeholder text -->

</resources>
