<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="sn.ipd.myschool.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_formation"
        android:name="sn.ipd.myschool.ui.formation.FormationFragment"
        android:label="@string/menu_formation"
        tools:layout="@layout/fragment_formation" />

    <fragment
        android:id="@+id/nav_degree"
        android:name="sn.ipd.myschool.ui.degree.DegreeFragment"
        android:label="@string/menu_degree"
        tools:layout="@layout/fragment_degree" />

    <fragment
        android:id="@+id/nav_university"
        android:name="sn.ipd.myschool.ui.university.UniversityFragment"
        android:label="@string/title_activity_university"
        tools:layout="@layout/fragment_university" />

    <fragment
        android:id="@+id/nav_share"
        android:name="sn.ipd.myschool.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />
    <fragment
        android:id="@+id/nav_inscription"
        android:name="sn.ipd.myschool.ui.inscription.InscriptionFragment"
        android:label="@string/inscription"
        tools:layout="@layout/activity_inscription" />

    <fragment
        android:id="@+id/nav_send"
        android:name="sn.ipd.myschool.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>