<?xml version="1.0" encoding="UTF-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".ui.inscription.InscriptionFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/inscription"
        android:textAlignment="center"
        android:textColor="@color/color_blue"
        android:textSize="@dimen/size_title"
        android:textStyle="bold" />
    aaqqqqaaa

    <EditText
        android:id="@+id/Prenom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textSize="@dimen/size_forms" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textSize="@dimen/size_forms" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:text="@string/formation"
            android:textSize="@dimen/size_forms"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/formation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textColor="@color/color_blue_dark"
            android:textSize="@dimen/size_forms"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="40dp"
            android:text="@string/level"
            android:textSize="@dimen/size_forms"
            android:textStyle="normal" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/tabClasse" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degree"
            android:textSize="@dimen/size_forms"
            android:textStyle="normal" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/cbOlevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:text="@string/olevel" />

    <CheckBox
        android:id="@+id/cbBachelor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:text="@string/bachelor" />

    <CheckBox
        android:id="@+id/cbMaster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:text="@string/master" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center">

        <Button
            android:id="@+id/buttonValider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/color_blue"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/save"
            android:textColor="@color/color_white" />

    </LinearLayout>

</LinearLayout>